docs(senior): expand SENIOR_ROADMAP with diagrams + B.8 modern patterns
Enhance existing sections with ASCII diagrams:
- Section 4 (Optimistic Locking): sequence diagram showing lost-update
  scenario and how @Version detects conflicts via WHERE version=?
- Section 8 (Resilience4j): full state machine diagram for Circuit
  Breaker (CLOSED ↔ OPEN ↔ HALF_OPEN transitions)
- Section 9 (Outbox Pattern): end-to-end architecture diagram showing
  atomic DB tx → outbox poller → Kafka flow
- Section 13 (Distributed Tracing): trace/span hierarchy + W3C
  traceparent header format
- Section 32 (JVM): heap layout (Eden/Survivor/Old/Metaspace) +
  GC algorithm comparison table

Add new section B.8 — Modern Java & Advanced Patterns (10 topics):
- 33. Virtual Threads (Project Loom) — Java 21 thread model, pinning,
  Spring Boot enable
- 34. GraalVM Native Image — AOT compilation, trade-offs
- 35. Saga Pattern — choreography vs orchestration, compensating actions
- 36. Caching Strategies — 4 patterns (cache-aside, read/write-through,
  write-behind) with diagrams + comparison
- 37. Dead Letter Queue & Retry Topics — Spring Kafka @RetryableTopic
- 38. Database Sharding & Partitioning — range/hash/directory strategies
- 39. Multi-tenancy — 3 isolation patterns + Hibernate filter + RLS
- 40. API Gateway & BFF — Spring Cloud Gateway config
- 41. Domain vs Integration Events — translation layer pattern
- 42. Reactive Programming — WebFlux thread model vs MVC+VT

Renumber roadmap sections 33-35 → 43-45 and update TOC.
Expand bibliography with DDIA, DDD, K8s Patterns, Release It!.